<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".experiments.CoroutinesExperimentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/scenario_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/run_scenario_one"
            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/scenario_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_scenario_two"
            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scenario_one" />

        <Button
            android:id="@+id/scenario_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_scenario_three"
            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scenario_two" />

        <Button
            android:id="@+id/scenario_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_scenario_four"
            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scenario_three" />

        <Button
            android:id="@+id/scenario_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_scenario_five"
            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scenario_four" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_center_guid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/scenario_cancel_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/run_cancel_scenario_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_center_guid"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/scenario_cancel_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_cancel_scenario_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_center_guid"
            app:layout_constraintTop_toBottomOf="@+id/scenario_cancel_one" />

        <Button
            android:id="@+id/scenario_cancel_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_cancel_scenario_three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_center_guid"
            app:layout_constraintTop_toBottomOf="@+id/scenario_cancel_two" />

        <Button
            android:id="@+id/scenario_cancel_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_cancel_scenario_four"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_center_guid"
            app:layout_constraintTop_toBottomOf="@+id/scenario_cancel_three" />

        <Button
            android:id="@+id/scenario_cancel_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_cancel_scenario_five"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_center_guid"
            app:layout_constraintTop_toBottomOf="@+id/scenario_cancel_four" />

        <Button
            android:id="@+id/scenario_cancel_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/run_cancel_scenario_six"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vertical_center_guid"
            app:layout_constraintTop_toBottomOf="@+id/scenario_cancel_five" />

        <include layout="@layout/progress_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>